# copycat

./: .gitignore  LICENSE  README.org  copycat.cabal
src/: Main.hs
src/Copycat/: Opts.hs
